* adding Series section (PART OF) * fixing promoted by section to look good on mobile * adding border bottom of the same color to RaceTypeBadge so it looks nice on mobile

--- a/src/client/calendar/events/event-details/EventDetails.scss
+++ b/src/client/calendar/events/event-details/EventDetails.scss
@@ -41,6 +41,16 @@
       letter-spacing: 0;
     }
 
+    .promoted-by-section {
+      margin-top: 1rem;
+
+      .promoted-by-section-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
+    }
+
     .address-link {
       margin-bottom: 1rem;
       display: inline-block;
@@ -48,6 +58,7 @@
       top: pxToRem(3);
       font-size: scaleUp(2.5);
     }
+
 
     .reg-results-button-container {
       margin-bottom: 2rem;
@@ -80,10 +91,15 @@
       margin-top: 0;
     }
 
-    .flyer {
-      height: 100rem;
-      background: rgba($blue-100, 0.5);
+    .flyer-section {
+      margin-top: 2em;
+
+      .flyer {
+        height: 100rem;
+        background: rgba($blue-100, 0.5);
+      }
     }
+
 
     .badges {
       position: absolute;
